# html2md-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: lib.rs  main.rs  parser.rs  structs.rs  to_md.rs
tests/: parser_tests.rs  to_md_tests.rs
